# proxy-imports

./: .gitignore  Plot Results (Perlmutter).ipynb  Plot Results (Theta).ipynb  Plot Results.ipynb  README.md  base_environment.yml  install.sh  packages.yml  proof_of_concept.py  proxy_importer.py  pyproject.toml  redis.conf  requirements.txt  scaling_test.py  setup.sh
analysis/: Analyze Functions.ipynb  Plot Results (Perlmutter).ipynb
benchmarks/: README.md  cloud_bursting.py  cloud_bursting_config.py  create_simulated_package.py  ml_inference.py  packages.yml  packaging.py  packaging_benchmark.py  parsl_config.py  scaling_test.py
benchmarks/analysis/: Plot Results (Theta).ipynb
benchmarks/scripts/: count_files.sh  packages.txt  run_experiment.sh  setup.sh  simulated_package_exp.sh  submit.sh  xtb_experiments.sh
benchmarks/setup_scripts/: setup_file_system.sh
benchmarks/xtb/: molecular_design.py  parsl_config.py  setup.py
experiments/: run_experiment.sh  submit.sh
patches/: theta_setup.patch
proxy_imports/: __init__.py  default_config.py  import_tracer.py  proxy_analyze.py  proxy_config.py  proxy_importer.py  proxy_transform.py
results/: package_statistics.csv  results-128.jsonl  results-simulated.jsonl  results.jsonl  xtb_results.jsonl
results/perlmutter/: results-simulated.jsonl  results.jsonl
results/theta/: cloud_bursting.jsonl  ml_results.jsonl  results-128-numpy.jsonl  (+1 more)
setup_scripts/: setup_conda_pack.sh  setup_file_system.sh  setup_lazy.sh
tests/: proof_of_concept.py  test_inference.py  test_module.py  test_serialization.py
(+14 files in other folders)
