[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy_imports"
authors = [
    {name = "Alok Kamatar", email = "alokvk2@uchicago.edu"},
]
description = "Package to move and lazily import modules using proxystore"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyinstaller",
    "proxystore"
]
dynamic = ["version"]

[project.scripts]
proxy-imports-init = "proxy_imports.proxy_config:cli_init_proxy_imports"

[tool.setuptools]
script-files = ["proxy_imports/import_tracer.py"]
packages = ["proxy_imports"]
